feat: Twitter linki ve skor sıfırlama özelliği eklendi

--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
                 <div class="result-actions">
                     <button id="play-again" class="btn-primary">Tekrar Oyna</button>
                     <button id="view-all-scores" class="btn-secondary">Tüm Skorları Gör</button>
+                    <button id="reset-scores" class="btn-danger">🗑️ Skorları Sıfırla</button>
                 </div>
             </div>
         </div>
@@ -129,7 +130,7 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <p>Developed by <strong>ferdogan</strong></p>
+        <p>Developed by <strong><a href="https://x.com/fecassie" target="_blank" rel="noopener noreferrer">@ferdogan</a></strong></p>
         <p>🌍 Zoom ekipleri için özel tasarlanmış oyun deneyimi</p>
     </footer>
 
